--- a/src/components/user/header/header.module.css
+++ b/src/components/user/header/header.module.css
@@ -135,6 +135,7 @@
 
     .header .text {
         display: flex;
+        flex-direction: column;
         gap: 20px;
         width: 100% !important;
     }
