--- a/src/components/user/displayCategories/displayCategories.module.css
+++ b/src/components/user/displayCategories/displayCategories.module.css
@@ -1,4 +1,3 @@
-
 .text span span {
     color: var(--mainColor);
     font-weight: 600;
@@ -11,6 +10,7 @@
     justify-content: center;
     position: relative;
     width: 257px;
+    cursor: pointer;
 }
 
 .img::before {
@@ -21,6 +21,7 @@
     background-color: var(--headerColor);
     bottom: 10px;
 }
+
 .swiper::after {
     content: '';
     position: absolute;
@@ -40,9 +41,4 @@
     z-index: 1000;
     border: 1px solid #AEB0B6;
     font-size: 16px;
-}
-
-.swiper-button-prev {
-    top: 0;
-    right: 0;
 }
