--- a/src/components/user/navbar/customNavbar.module.css
+++ b/src/components/user/navbar/customNavbar.module.css
@@ -5,9 +5,11 @@
     top: 0;
     z-index: 99999;
 }
+
 .userNavbar a {
     color: var(--darkColor);
 }
+
 .userNavbar .text {
     position: relative;
 }
@@ -40,6 +42,11 @@
 .userNavbar .star i {
     font-size: 12px;
 }
+
+.userNavbar .cart {
+    cursor: pointer;
+}
+
 .userNavbar .cart span {
     top: 5px;
     left: 25px;
@@ -55,4 +62,12 @@
 .userNavbar .dropdown_menu {
     left: -30px;
 }
+
+/* responsive */
+@media screen and (max-width: 992px) {
+    .userNavbar .info {
+        flex-direction: row;
+    }
+}
+
 /* End User navber */
