--- a/src/components/user/trend/trend.module.css
+++ b/src/components/user/trend/trend.module.css
@@ -6,6 +6,7 @@
     border-radius: 12px;
     padding: 15px;
     height: 510px;
+    overflow: hidden;
 }
 
 .item img {
@@ -37,6 +38,20 @@
 @media screen and (max-width: 767px) {
     .item {
         height: 450px;
+    }
+
+    .item a {
+        font-size: 13px;
+    }
+}
+
+@media screen and (max-width: 445px) {
+    .item {
+        height: 500px;
+    }
+
+    .item a {
+        font-size: 12px;
     }
 }
 
