--- a/src/index.css
+++ b/src/index.css
@@ -34,4 +34,124 @@ body {
     color: var(--darkColor);
 }
 
+.swiper-button-prev {
+    top: 5% !important;
+    right: 8% !important;
+    left: auto !important;
+    width: 48px !important;
+    height: 48px !important;
+    font-size: 15px;
+    border-radius: 50%;
+    border: 1px solid #5E626F;
+    background: transparent;
+    position: relative;
+    transition: 0.6s;
+    margin-right: 1%;
+}
+
+.swiper-button-prev::after {
+    /* content: '\f060' !important; */
+    font-size: 20px !important;
+    color: var(--darkColor) !important;
+    transition: 0.6s;
+}
+
+.swiper-button-prev::before {
+    content: '';
+    position: absolute;
+    background-color: var(--darkColor);
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    bottom: 2px;
+    left: 2px;
+    z-index: 99;
+}
+
+.swiper-button-prev:hover .swiper-button-prev::before {
+    width: 100%;
+    height: 100%;
+    transition: 0.6s;
+}
+
+.swiper-button-prev:hover .swiper-button-prev::after {
+    color: var(--headerColor);
+    transition: 0.6s;
+}
+
+.swiper-button-next {
+    top: 5% !important;
+    right: 4% !important;
+    left: auto !important;
+    width: 48px !important;
+    height: 48px !important;
+    font-size: 15px;
+    border-radius: 50%;
+    border: 1px solid #5E626F;
+    background: transparent;
+    position: relative;
+    transition: 0.6s;
+}
+
+.swiper-button-next::after {
+    /* content: '\f060' !important; */
+    font-size: 20px !important;
+    color: var(--darkColor) !important;
+    transition: 0.6s;
+}
+
+.swiper-button-next::before {
+    content: '';
+    position: absolute;
+    background-color: var(--darkColor);
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    top: 2px;
+    right: 2px;
+    z-index: 99;
+}
+
+.swiper-button-next:hover .swiper-button-next::before {
+    width: 100%;
+    height: 100%;
+    transition: 0.6s;
+}
+
+.swiper-button-next:hover .swiper-button-next::after {
+    color: var(--headerColor);
+    transition: 0.6s;
+}
+
+.page-link {
+    color: var(--darkColor);
+}
+
+.active>.page-link {
+    background-color: var(--darkColor);
+    border-color: var(--borderColor);
+}
+
+/* responsive */
+@media screen and (max-width: 1050px) {
+    .swiper-button-prev {
+        margin-right: 2%;
+    }
+}
+@media screen and (max-width: 850px) {
+    .swiper-button-prev {
+        margin-right: 4%;
+    }
+}
+@media screen and (max-width: 640px) {
+    .swiper-button-prev {
+        margin-right: 6%;
+    }
+}
+@media screen and (max-width: 515px) {
+    .swiper-button-prev {
+        margin-right: 8%;
+    }
+}
+
 /**************************/
